# CV_Editor

./: .gitignore  CV_Editor.db  Dockerfile  Makefile  README.md  REQ.md  TODO.md  alembic.ini  cv_editor.postman_collection.json  db_queries.py  db_recreate.py  docker-compose.yml  environment.env  insert_cv.sql  main.py  projekt_zaliczeniowy.md  pyproject.toml  requirements.txt  select_one.sql
alembic/: env.py
alembic/versions/: 0151e5487080_create_login_table_table.py  01_start.py  12d876a772a1_add_dummy_data_to_basic_table.py  1_start.py  1a6ab9adc46b_start.py  1c3960828216_start.py  2_create_admin.py  2b3afb81499c_start.py  37c82705e903_start.py  475b14b14f97_start.py  4fe95ab59d48_.py  76f6c9221321_test1.py  786e36b8e1b5_start.py  7ee68741df55_link_login_table_and_basic_table_step2.py  8c8515a8a996_test1.py  906d64bdc953_link_login_table_and_basic_table.py  afe8e408913f_start.py  b4c2ef40f458_start.py  bcb8dbd28cbb_add_admin_to_login_table.py  c2740c2bf03c_test1.py  cd8f311a34e5_create_basic_table_table.py
app/: CV_Editor.sqlite-journal  __temp.py  _removed_www_app_with_auth.py  _temp.py  _temp_makefile-input  _temp_models.py  _temp_models_oooold.py  _temp_models_simple.py  _temp_sqlalch_example.py  auth.py  config.py  db.py  db_methods.py  db_queries.py  db_recreate.py  exceptions.py  functions.py  get_secret.py  init_db.py  main.py  main_old.py  models.py  models_almost_there.py  models_old.py  session.py  sql_queries.py
app/sql/: delete_one.sql  select_all.sql  update_cv.sql
app/templates/: index.html
aws_lambda/: functions.py  get_secret.py  main.py  models.py  session.py
aws_lambda/lambda_pkg/: functions.py  get_secret.py  main.py  session.py
features/: environment.py  test_api_cv_post.feature  test_get_index.feature
features/fixtures/: 201-3.json  201-4.json  400-3.json
features/steps/: 201-1.json  201-4.json  201-5.json  api_cv_post.py  common.py  get_index.py
lambda/: main.py  session.py
templates/: index.html  index2.html
tests/: conftest.py  test_api_cv_post.py  test_functions.py  test_index.py
tests/app/component/: environment.py
(+35 files in other folders)
