[tool.poetry]
name = "cv_editor"
version = "0.1.0"
description = ""
authors = ["andrzej <andrzej.szulc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
behave = "^1.2.6"
certifi = "^2020.6.20"
requests = "^2.24.0"
attrs = "^20.2.0"
cffi = "^1.14.3"
chardet = "^3.0.4"
click = "^7.1.2"
cryptography = "^3.1"
Flask-Alembic = "^2.0.1"
Flask-SQLAlchemy = "^2.4.4"
idna = "^2.10"
iniconfig = "^1.0.1"
itsdangerous = "^1.1.0"
Jinja2 = "^2.11.2"
Mako = "^1.1.3"
MarkupSafe = "^1.1.1"
more-itertools = "^8.5.0"
packaging = "^20.4"
parse = "^1.18.0"
parse-type = "^0.5.2"
pluggy = "^0.13.1"
py = "^1.9.0"
pycparser = "^2.20"
PyMySQL = "^0.10.1"
pyparsing = "^2.4.7"
pytest = "^6.0.2"
python-dateutil = "^2.8.1"
python-editor = "^1.0.4"
six = "^1.15.0"
SQLAlchemy = "^1.3.19"
toml = "^0.10.1"
urllib3 = "^1.25.10"
Werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]
flask = "^1.1.2"
alembic = "^1.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
