[tool.poetry]
name = "cv_editor"
version = "0.1.0"
description = ""
authors = ["andrzej <andrzej.szulc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "^0.10.1"
SQLAlchemy = "^1.3.19"
flask = "^1.1.2"
alembic = "^1.4.3"
cryptography = "^3.1"
gunicorn = "^20.0.4"
boto3 = "^1.15.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
behave = "^1.2.6"
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
