[tool.poetry]
name = "cv_editor"
version = "0.1.0"
description = ""
authors = ["andrzej <andrzej.szulc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "^0.10.1"
SQLAlchemy = "^1.3.19"
flask = "^1.1.2"
gunicorn = "^20.0.4"
boto3 = "^1.15.11"
PyJWT = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
behave = "^1.2.6"
requests = "^2.24.0"
moto = "^1.3.16"
localstack = "^0.11.5"
alembic = "^1.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
